# ChangeLog for app-editors/leafpad
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/leafpad/ChangeLog,v 1.21 2009/04/04 10:15:16 solar Exp $

  04 Apr 2009; <solar@gentoo.org> leafpad-0.8.14.ebuild:
  - Keyword ~arm

  20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing compnerd as a maintainer since he was retired.

  03 Sep 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  leafpad-0.8.14.ebuild:
  attempt #2 to deal with collisions from gtk-update-icon-cache running

  03 Sep 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  leafpad-0.8.14.ebuild:
  Fix collision for icons

  29 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  -leafpad-0.8.7.ebuild:
  prune unused version

*leafpad-0.8.14 (29 Mar 2008)

  29 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +leafpad-0.8.14.ebuild:
  Version bump from upstream (bug #214708)

  25 Mar 2008; Raúl Porcel <armin76@gentoo.org> leafpad-0.8.12.ebuild:
  x86 stable

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing taviso from metadata.xml as per #202471.

*leafpad-0.8.12 (23 Dec 2007)

  23 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +leafpad-0.8.12.ebuild:
  Version bump from upstream

  23 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -leafpad-0.7.9.ebuild, -leafpad-0.8.1.ebuild, -leafpad-0.8.3.ebuild:
  Prune unused versions

  23 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org> metadata.xml:
  Add myself as a maintainer

  21 Oct 2007; Markus Meier <maekke@gentoo.org> leafpad-0.8.7.ebuild:
  x86 stable, bug #164337

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*leafpad-0.8.7 (20 Jan 2006)

  20 Jan 2006; Tavis Ormandy <taviso@gentoo.org> +leafpad-0.8.7.ebuild:
  bump

  24 Oct 2005; Tavis Ormandy <taviso@gentoo.org> leafpad-0.8.3.ebuild:
  stable on x86

*leafpad-0.8.3 (21 Aug 2005)
