@@ -1,4 +1,6 @@
 DIST leafpad-0.8.14.tar.gz 269496 RMD160 62b0c0bc53a9f68ecec77fa87e5989bfd8ef70f5 SHA1 6cd31b2a5730d8537366eecb910a59a888c1e1aa SHA256 be1e4bb3541af042a9b53745ba1aa6929e5e3f2ba740782579cb7c7ddac5a979
+DIST leafpad-0.8.16.tar.gz 271750 RMD160 da1a88d801945cd6d3f6caceb5fb9d330daae3ed SHA1 b6a3e28fdcf38665ad981b4dadd1364f38dd8f0b SHA256 a4d682894a45e5ad66d7ed1d24caeb67b3e4b9014d503149425d3deb134d8bb2
 EBUILD leafpad-0.8.14.ebuild 957 RMD160 54bc888dab37cc5978efbab28dad00040218f49b SHA1 9f830d36ddeeb14b9a6c1aecd8656132c0c0f056 SHA256 38e1ddf4fe58651b63883dabdb5f71cf3b95298e6da3423921c8744a972faa16
-MISC ChangeLog 2578 RMD160 195838a3216a717412be628d986c65245498f951 SHA1 4e6e98f504a9effea9f6f89a40e4d308d66ab8a2 SHA256 5b88a6647baf8d4d208916f4fd6822063ad02bf2c45fe6dba54d0af0093fb65b
-MISC metadata.xml 237 RMD160 99ad7d74017fb5612781e61bcb87b90f030a6c6a SHA1 1d302527e0fa5d262ee19c7012f4a74fed512224 SHA256 44a27de3edf5b909676f678ff71c2ef1b9a39a123f5ba585822842aeb75f9f0e
+EBUILD leafpad-0.8.16.ebuild 1066 RMD160 852940b6a88247e24af9b4c22baad79cf0fcda76 SHA1 180ee2e2b38fb0034c8f952374e85d5b96511796 SHA256 654ec93d3f6928d1434101482ef8e209527158136392d7e7071e76c51c137514
+MISC ChangeLog 2712 RMD160 c985e91dcab2bd6a29d996b21bf0989e4a40dd59 SHA1 6771512125fd2ec33e89103adde57881738351ba SHA256 ffc7ac8af0ae2afafab696c91011ee26380d8cba862d1476c17030ea0a8dc782
+MISC metadata.xml 319 RMD160 f46d93b132f892dd4b9a3f922acba4c9ac2b850d SHA1 0453c13e00b5b846926d35692033f4769ab07a04 SHA256 42ba0ba86e3a44e0bfbc07f864319b6d3a8db8f78d9b2c66bf7eb691652b8db8
