@@ -3,6 +3,10 @@
 <pkgmetadata>
 	<herd>no-herd</herd>
 	<maintainer>
-		<email>maintainer-needed@gentoo.org</email>
-		</maintainer>
+		<email>nyhm@gentoo.org</email>
+		<name>Tristan Heaven</name>
+	</maintainer>
+	<use>
+		<flag name="emacs">Enable Emacs key theme</flag>
+	</use>
 </pkgmetadata>
