@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/leafpad
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/leafpad/ChangeLog,v 1.21 2009/04/04 10:15:16 solar Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/leafpad/ChangeLog,v 1.22 2009/05/19 14:30:41 nyhm Exp $
+
+*leafpad-0.8.16 (19 May 2009)
+
+  19 May 2009; Tristan Heaven <nyhm@gentoo.org> +leafpad-0.8.16.ebuild,
+  metadata.xml:
+  Version bump
 
   04 Apr 2009; <solar@gentoo.org> leafpad-0.8.14.ebuild:
   - Keyword ~arm
